# guardian-agent

./: --port  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  INSTALLATION.md  LICENSE  README.md  SECURITY.md  SOUL.md  THIRD_PARTY_NOTICES.md  Testapp  USAGE.md  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  start-dev-unix.sh  start-dev-windows.ps1  test-args.mjs  test-executor.mjs  test-history-bug.mjs  test-pending-action.mjs  test-regex.js  test-req.js  test-resolve.js  test-resolve2.js  test-resolve3.js  test-resolve4.js  test-resolve5.js  test-resume-injection.mjs  test-sb.js  test-switch-c.txt  test-web-app.js  test-web-app.mjs  test5  tsconfig.json  txt.txt  vite.config.ts  vitest.config.ts
.guardianagent/: marketing-state.json
docs/: WORKLOG-QMD-AUTH-2026-03-05.md  auth-audit.md
examples/: llm-chat.ts
external_test_area/: approval-smoke.txt
native/windows-helper/: Cargo.toml
native/windows-helper/src/: main.rs
plans/: AGENTIC-DEFENSIVE-SECURITY-SUITE-IMPLEMENTATION-PLAN.md  ASSISTANT-CAPABILITY-UPLIFT-ROADMAP.md  ASSISTANT-CAPABILITY-UPLIFT-STATUS.md  CORE-ARCHITECTURE-MODULARIZATION-PLAN.md  CROSS-SURFACE-CONTINUITY-UPLIFT-PLAN.md
proposals/: REGULATED-ACTION-ASSURANCE-PROPOSAL.md
scripts/: build-windows-helper.ps1  build-windows-installer.ps1  build-windows-package.ps1  build-windows-release.ps1  dev.ps1  dev.sh  ensure-gws.mjs  ensure-qmd.mjs  fake-browser-mcp.mjs  generate-curated-webui-themes.mjs  make-windows-portable.ps1  ollama-harness-defaults.mjs  repro-gws-native.mjs  start-dev-unix.sh  start-dev-windows.ps1  test-all.ps1  (+48 more)
(+1113 files in other folders)
